Updated email validation

--- a/src/app/signup/components/signup-form/signup-form.component.html
+++ b/src/app/signup/components/signup-form/signup-form.component.html
@@ -52,7 +52,7 @@
     />
     <warning
       [control]="signupForm.controls['email']"
-      key="email"
+      key="theOtherEmail"
       warning="Please provide a valid email address."
     />
   </div>
