Added validation tests, added coverage

--- a/src/app/signup/components/signup-form/signup-form.component.html
+++ b/src/app/signup/components/signup-form/signup-form.component.html
@@ -54,7 +54,7 @@
     <warning
       [control]="signupForm.controls['password']"
       key="noNames"
-      warning="Password should not contain either firstname or lastname."
+      warning="Password should not contain either firstname or lastname"
     />
   </div>
   <div class="field">
@@ -73,7 +73,7 @@
     <warning
       [control]="signupForm.controls['email']"
       key="theOtherEmail"
-      warning="Please provide a valid email address."
+      warning="Please provide a valid email address"
     />
   </div>
   <p *ngIf="showWarning">Please fill out the form correctly.</p>
