Added e2e test with Cypress. Show message when data has been sent.

--- a/src/app/signup/components/signup-form/signup-form.component.html
+++ b/src/app/signup/components/signup-form/signup-form.component.html
@@ -76,7 +76,8 @@
       warning="Please provide a valid email address"
     />
   </div>
-  <p *ngIf="showWarning">Please fill out the form correctly.</p>
+  <p *ngIf="showWarning" class="alert">Please fill out the form correctly.</p>
+  <p *ngIf="showSuccess" class="info">Your data has been sent successfully.</p>
   <div class="buttons">
     <button type="submit" [attr.disabled]="showWarning ? true : null">
       Sign up
