--- a/src/app/signup/components/signup-form/signup-form.component.less
+++ b/src/app/signup/components/signup-form/signup-form.component.less
@@ -48,6 +48,24 @@ form {
   }
 }
 
+.alert,
+.info {
+  margin: 1em 0 1em @labelSize;
+  padding: 8px;
+  border-radius: 4px;
+}
+
+.alert {
+  background-color:rgb(221, 186, 121);
+  color: white;
+
+}
+
+.info {
+  background-color:rgb(105, 191, 111);
+}
+
+
 .buttons {
   padding-left: @labelSize;
 
